Closed
Bug 382640
Opened 18 years ago
Closed 18 years ago
crash [@ nsMsgHdr::IsParentOf]
Categories
(MailNews Core :: Backend, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: tuukka.tolvanen, Assigned: mscott)
References
Details
(Keywords: crash)
Crash Data
Attachments
(2 files)
8.67 KB,
text/plain
|
Details | |
4.23 KB,
patch
|
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
tbird trunk 2007-05-30&31, linux. see also TB32697961 TB32691401, guess it's not just me ;)
Bug 379070 msgthread foo sounds likely based on dates and stack
no str, sorry, got this twice pretty randomly
Reporter | ||
Comment 1•18 years ago
|
||
ah, attachment 266671 [details] [diff] [review] from bug 382504 might prevent the crash here with
- if (NS_SUCCEEDED(rv))
+ if (NS_SUCCEEDED(rv) && curHdr)
{
if (hdr->IsParentOf(curHdr))
in nsMsgThread::AddChild
Assignee | ||
Comment 2•18 years ago
|
||
Add back the null ptr checks along with the NS_SUCCEEDED macros.
This should fix a couple different crashes that are floating around.
Updated•18 years ago
|
Attachment #266786 -
Flags: superreview?(bienvenu) → superreview+
Comment 4•18 years ago
|
||
Wow...for the future I know that the statement "There's no need to check for a failure code and a null value." only applies to do_QueryInterface. I'm sorry for the inconveniences.
Assignee | ||
Comment 5•18 years ago
|
||
fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Updated•17 years ago
|
Product: Core → MailNews Core
Updated•14 years ago
|
Crash Signature: [@ nsMsgHdr::IsParentOf]
You need to log in
before you can comment on or make changes to this bug.
Description
•