Bug #382640 --> add back some null ptr checks to nsMsgThread to eliminate a group of crash bugs the previous patch introduced.

sr=bienvenu